--- a/lineman/app/templates/group.haml
+++ b/lineman/app/templates/group.haml
@@ -31,6 +31,6 @@
           %i.fa.fa-lg.fa-chevron-down
         %h3.first{ translate: 'group_page.members' }
         %members{group: 'group'}
-      .group-page-subgroups
+      .group-page-subgroups{ng_show: '!group.parentId'}
         %h3.first{ translate: 'group_page.subgroups' }
         %subgroups{group: 'group'}
