Add directive for navbar search

--- a/lineman/app/templates/navbar.haml
+++ b/lineman/app/templates/navbar.haml
@@ -16,8 +16,7 @@
         %a.loomio-nav-btn.dropdown-toggle{href: '#'}
           %i.fa.fa-lg.fa-fw.fa-search
         .loomio-nav-dropdown.dropdown-menu{role: 'menu'}
-          SEARCH
-          -#%navbar_search{ng_show: 'showSearch'}
+          %navbar_search{ng_show: 'showSearch'}
       %li.pull-right
         %a.loomio-nav-btn{href: '#'}
           %i.fa.fa-lg.fa-fw.fa-navicon
