tweaks to vote form

--- a/lineman/app/templates/group.haml
+++ b/lineman/app/templates/group.haml
@@ -19,8 +19,10 @@
                 {{group.name}}
           %group_privacy_dropdown{group: 'group'}
       .group-page-description
-        .context-menu.pull-right
-          %i.fa.fa-lg.fa-chevron-down
+        / eventually this will be edited in an inline form. For now it
+        / is okay to just do it on the group edit page
+        / .context-menu.pull-right
+        /   %i.fa.fa-lg.fa-chevron-down
         %h3.first{ translate: 'group_page.description' }
         .group-description.last{ btf-markdown: 'group.description' }
       .group-page-threads
