--- a/lineman/app/css/vote_form.scss
+++ b/lineman/app/css/vote_form.scss
@@ -1,11 +1,5 @@
-.vote-form {
-
-}
-.vote-form-label{
-  font-weight: bold;
-}
-.vote-form-details{
-  font-weight: normal;
+.vote-form form{
+  margin-top: 10px;
 }
 .position-buttons {
   margin-bottom: 5px;
