--- a/lineman/app/templates/group_notifications_dropdown.haml
+++ b/lineman/app/templates/group_notifications_dropdown.haml
@@ -1,6 +1,5 @@
-.group-page-privacy{dropdown: '', on-toggle: 'toggled(open)'}
-  %a.btn.btn-icon.btn-default.btn-block.dropdown-toggle{href: '#'}
-    .group-notification-button
+.group-page-notifications{dropdown: '', on-toggle: 'toggled(open)'}
+  %a.group-notifications-button.btn.btn-icon.btn-default.btn-block.dropdown-toggle{href: '#'}
       %i.fa.fa-lg.fa-volume-up{ng_show: 'membership.followingByDefault'}>
       %i.fa.fa-lg.fa-volume-off{ng_hide: 'membership.followingByDefault'}>
       %span{translate: 'group_page.notifications_label'}
