add group options dropdown

--- a/lineman/app/css/main.scss
+++ b/lineman/app/css/main.scss
@@ -104,7 +104,7 @@ $sidebar-width: 320px;
 .timeago{
   @include metaText;
 }
-.dropdown-menu.with-labels{
+.dropdown-menu-with-labels{
   padding: 15px;
   width: 300px;
 }
