--- a/lineman/app/templates/group_notifications_dropdown.haml
+++ b/lineman/app/templates/group_notifications_dropdown.haml
@@ -3,7 +3,7 @@
     %i.fa.fa-lg.fa-volume-up{ng_show: 'membership.followingByDefault'}>
     %i.fa.fa-lg.fa-volume-off.fa-volume-off-padded{ng_hide: 'membership.followingByDefault'}>
     %span{translate: 'group_page.notifications_label'}
-  .dropdown-menu.with-labels.dropdown-menu-right{role: 'menu'}
+  .dropdown-menu.dropdown-menu-with-labels.dropdown-menu-right{role: 'menu'}
     %h3.dropdown-heading{translate: 'group_page.notifications_label'}
     %ul.dropdown-menu-items
 
