--- a/lineman/app/css/layout.scss
+++ b/lineman/app/css/layout.scss
@@ -1,4 +1,3 @@
-
 .menu-image { padding: 15px; }
 
 #header{
@@ -153,5 +152,12 @@ a .drawer-item-proposal-details {
   color: $meta-text-color;
   @include fontHelvetica;
   @include fontSmall;
+}
+
+
+.container#main.generic-container{
+  @include card;
+  max-width: 600px;
+  padding-top: 58px;
 }
 
