--- a/lineman/app/templates/group_form.haml
+++ b/lineman/app/templates/group_form.haml
@@ -1,4 +1,4 @@
-%form{name: 'groupForm', ng_submit: 'submit()'}
+%form.group-form{name: 'groupForm', ng_submit: 'submit()'}
   %h1{ng_show: 'group.isNew() && !group.parentId', translate: 'group_form.new_group_title'}
   %h1{ng_show: 'group.isNew() && group.parentId', translate: 'group_form.new_subgroup_title', translate-value-parent-group-name: '{{group.parentName()}}'} 
   %h1{ng_show: '!group.isNew()', translate: 'group_form.edit_group_title'}
