--- a/lineman/app/pages/index.haml
+++ b/lineman/app/pages/index.haml
@@ -20,7 +20,7 @@
     %sidebar#sidebar.hidden-xs
       %inbox
     .sidebar-spacer
-      .container#main.generic-container
+      .container#main
         %main{ng_view: ''}
 
 
