Flesh out notification pipeline

--- a/lineman/app/templates/navbar.haml
+++ b/lineman/app/templates/navbar.haml
@@ -24,8 +24,7 @@
         %a.loomio-nav-btn.dropdown-toggle{href: '#'}
           %i.fa.fa-lg.fa-fw.fa-bell
         .loomio-nav-dropdown.dropdown-menu{role: 'menu'}
-          NOTIFICATIONS
-          -#%navbar_notifications{ng_show: 'showNotifications'}
+          %navbar_notifications{ng_show: 'showNotifications'}
       %li.pull-right
         %a.loomio-nav-btn{href: '#', ng_click: 'openDiscussionForm()'}
           %i.fa.fa-lg.fa-fw.fa-plus
