--- a/lineman/app/templates/navbar_notifications.haml
+++ b/lineman/app/templates/navbar_notifications.haml
@@ -1,4 +1,4 @@
 .navbar-notifications-container
   .navbar-notifications{infinite-scroll: 'getNextPage()', infinite-scroll-distance: 1, infinite-scroll-disabled: 'lastPage'}
     .navbar-notification{ng_repeat: 'notification in currentNotifications()'}
-        {{ notification.eventId }}
+        {{ notification.event().kind }} {{ notification.eventId }}
