--- a/lineman/app/templates/navbar_search.haml
+++ b/lineman/app/templates/navbar_search.haml
@@ -1,4 +1,11 @@
 .navbar-search
-  %input.form-control{ng_model: 'query'}
-  .navbar-group{ng_repeat: 'group in availableGroups() | filter:query'}
-    {{group.name}}
+  .navbar-search-input
+    %input.form-control{ng_model: 'query', placeholder: "{{ 'navbar.search_placeholder' | translate }}"}
+  %ul.selector-list
+    %li.selector-list-header
+      %h3{translate: "common.groups"}
+    %li.selector-list-item.media{ng_repeat: 'group in availableGroups() | filter:query', class: 'is-subgroup-{{group.parentId != null}}'}
+      %a.selector-list-item-link{href: '/groups/{{group.key}}'}
+        .media-left
+          %img.selector-list-item-group-logo{src: "{{group.logoUrlSmall}}"}
+        .selector-list-item-group-name.media-body {{group.name}}
