--- a/lineman/app/templates/navbar_notifications.haml
+++ b/lineman/app/templates/navbar_notifications.haml
@@ -1,4 +1,6 @@
 .navbar-notifications-container
-  .navbar-notifications{infinite-scroll: 'getNextPage()', infinite-scroll-distance: 1, infinite-scroll-disabled: 'lastPage'}
-    .navbar-notification{ng_repeat: 'notification in currentNotifications()'}
-        {{ notification.event().kind }} {{ notification.eventId }}
+  .navbar-notifications
+    %ul.selector-list
+      %li.selector-list-header
+        %h3{translate: "notifications.header"}
+      %li.selector-list-item.media{ng_repeat: 'notification in notifications()', ng_include: "'generated/templates/notification_items/'+ notification.event().kind + '.html'" }
