--- a/lineman/app/pages/index.haml
+++ b/lineman/app/pages/index.haml
@@ -17,8 +17,8 @@
     %navbar
 
     / only load this if the sidebar is open
-    %sidebar#sidebar.hidden-xs
-      %inbox
+    / %sidebar#sidebar.hidden-xs
+    /   %inbox
     .sidebar-spacer
       .container#main
         %main{ng_view: ''}
