--- a/lineman/app/templates/discussion_items/new_comment.haml
+++ b/lineman/app/templates/discussion_items/new_comment.haml
@@ -8,7 +8,8 @@
         %a{href: '', ng-click: 'deleteComment()', ng-if: '::canDeleteComment()',  translate: 'new_comment_item.context_menu.delete_comment'}
 
   .thread-event-header.media
-    .media-left{ng-include: "'generated/templates/user/avatar.html'", ng-init: 'user = comment.author()'}
+    .media-left
+      %user_avatar{user: "comment.author()"}
     .media-body
       %span{ng-show: 'comment.parentId', translate: 'new_comment_item.in_reply_to', translate-values: '{author: comment.authorName(), recipient: comment.parentAuthorName()}'}
       %span{ng-hide: 'comment.parentId'}
