--- a/lineman/app/templates/comment_form.haml
+++ b/lineman/app/templates/comment_form.haml
@@ -1,3 +1,10 @@
 %form{name: 'commentForm', ng_submit: 'submit()'}
   %textarea#comment-field.form-control{name: 'body', rows: 5, placeholder: "Say something...", ng_blur: "collapseIfEmpty()", ng_model: 'comment.body', mentio: true, mentio-trigger-char: "'@'", mentio_items: 'mentionables', mentio-template-url: 'generated/templates/mentio_menu.html', mentio-search: 'getMentionables(term)', mentio-typed-term: 'typedTerm', mentio-id: 'comment-field', ng-model-options: "{ updateOn: 'default blur', debounce: {'default': 300, 'blur': 0} }"}
-  %button#post-comment-btn.btn.btn-default.btn-block.submit{type: 'submit'} Post
+  .comment-row.comment-attachments{ng_repeat: 'attachment in comment.attachments()'}
+    %a.attachment-link{ng_href: '{{attachment.location}}', target: '_blank'}
+      {{ attachment.filename }}
+    %span.attachment-filesize
+      ({{ attachment.filesize | fileSize }})
+  .actions
+    %button#post-comment-btn.btn.btn-default.btn-primary.submit{type: 'submit'} Post
+    %attachment_form{comment: 'comment'}
