--- a/lineman/app/templates/attachment_form.haml
+++ b/lineman/app/templates/attachment_form.haml
@@ -1,11 +1,10 @@
 .attachments
-  .attachment-new{ng_hide: 'isAttaching'}
+  .attachment-new.img-rounded{ng_hide: 'isAttaching'}
     %input{type: 'file', ng_file_select: 'upload($files)'}
-    .cover-up
-      %i.fa.fa-paperclip
+    %i.fa.fa-2x.fa-paperclip.cover-file-upload
   .attachment-in-progress{ng_show: 'isAttaching'}
     .attachment-filename {{ uploadingFilename }}
     .progress.active
-      %progress-bar.progress-striped.active{ng_attr_value: 'percentComplete'}
+      %progressbar.progress-striped.active{value: 'percentComplete'}
         {{ percentComplete }} %
-    %button.close.cancel-upload{ng_click: 'abort()'} &times;
+      %button.close.cancel-upload{ng_click: 'upload.abort()'} &times;
