--- a/lineman/app/templates/proposals.haml
+++ b/lineman/app/templates/proposals.haml
@@ -4,6 +4,6 @@
       %h3.first Proposal
       %proposal_card{proposal: 'proposal'}
 
+      %h3{ng-show: "discussion.proposals().length > 1"} Previous proposals
     .inactive-proposal{ng-hide: 'isSelectedProposal(proposal)', ng_click: 'setSelectedProposal(proposal)'}
-      %h3 Previous proposals
       %proposal_card_collapsed{proposal: 'proposal'}
