style comment form

--- a/lineman/app/css/main.scss
+++ b/lineman/app/css/main.scss
@@ -154,7 +154,7 @@ h3.dropdown-heading{
 .form-group{
   margin-top: 20px;
 }
-input, select{
+input, select, textarea{
   margin-bottom: 10px;
 }
 textarea{
