--- a/lineman/app/templates/discussion_items/new_comment.haml
+++ b/lineman/app/templates/discussion_items/new_comment.haml
@@ -19,8 +19,7 @@
   .thread-attachments
     .thread-attachment{ng-repeat: 'attachment in comment.attachments()'}
       %a{ng-href: '{{attachment.location}}', target: '_blank'}
-        {{::attachment.filename }}
-      ({{::attachment.filesize | fileSize}})
+        / {{::attachment.filename }}
 
   .thread-event-footer
     .thread-actions-and-meta
