--- a/lineman/app/templates/discussion.haml
+++ b/lineman/app/templates/discussion.haml
@@ -1,7 +1,7 @@
 .row
   .col-xs-12
     .thread-container
-      .dropdown.pull-right{ng-if: '::showContextMenu()'}
+      .dropdown.pull-right{ng-if: 'showContextMenu()'}
         %a.dropdown-toggle{href:''}
           %i.fa.fa-chevron-down
         %ul.dropdown-menu
