--- a/lineman/app/templates/members.haml
+++ b/lineman/app/templates/members.haml
@@ -1,5 +1,5 @@
 .group-page-members
-  .context-menu.pull-right{ng-if: '::canAddMembers()'}
+  .context-menu.pull-right{ng-if: 'canAddMembers()'}
     %i.fa.fa-lg.fa-chevron-down
 
   %h3.first{ translate: 'group_page.members' }
