--- a/lineman/app/css/base.scss
+++ b/lineman/app/css/base.scss
@@ -22,7 +22,7 @@ h3, h4 {
   @include fontHelveticaMedium;
   @include fontSmall;
   text-transform: uppercase;
-  color: #545454;
+  color: $kinda-dark-grey;
   margin-top: 22px;
 }
 
