--- a/lineman/app/templates/discussion.haml
+++ b/lineman/app/templates/discussion.haml
@@ -42,8 +42,8 @@
 
       %add_comment{discussion: 'discussion'}
 
-    .thread-container
-      .thread-start-proposal-card{ng_controller: 'StartProposalCardController', ng-show: '!discussion.activeProposal()'}
+    .thread-container{ng_controller: 'StartProposalCardController', ng-if: 'canStartProposals()'}
+      .thread-start-proposal-card
         %h3.first Ready to make a decision?
         %a{href: '#', ng_click: 'openForm()'}
         Create a proposal
