Hell of a merge conflict, buddies!

--- a/lineman/app/templates/comment_form.haml
+++ b/lineman/app/templates/comment_form.haml
@@ -6,7 +6,7 @@
     %span.attachment-filesize
       ({{ attachment.filesize | fileSize }})
     %a.close.remove-upload{href: '#', ng_click: 'removeAttachment(attachment)'} &times;
-  .thread-comment-form-actions
+  .thread-comment-form-actions.clearfix
     %button#post-comment-btn.btn.btn-default.btn-primary.pull-left.submit{type: 'submit'} Post
-    %add_attachment.pull-left{comment: 'comment'}
+    %attachment_form.pull-left{comment: 'comment'}
     %button#post-comment-cancel.btn.btn-default.pull-right{translate: 'common.action.cancel', ng-click: 'cancel($event)'}
