--- a/lineman/app/templates/attachment_form.haml
+++ b/lineman/app/templates/attachment_form.haml
@@ -1,10 +1,10 @@
-.attachments
-  .attachment-new.img-rounded{ng_hide: 'isAttaching'}
-    %input{type: 'file', ng_file_select: 'upload($files)'}
-    %i.fa.fa-2x.fa-paperclip.cover-file-upload
+.comment-form-attachments
+  %button.btn.btn-default#comment-form-attachment-button{ng-hide: 'isAttaching', ng-click: 'openFileUploadDialog()'}
+    %i.fa.fa-lg.fa-paperclip
+   %input.hidden{type: 'file', ng_file_select: 'upload($files)'}
   .attachment-in-progress{ng_show: 'isAttaching'}
     .attachment-filename {{ uploadingFilename }}
     .progress.active
-      %progressbar.progress-striped.active{value: 'percentComplete'}
+      %progressbar.progress-striped.active{ng_attr_value: 'percentComplete'}
         {{ percentComplete }} %
-      %button.close.cancel-upload{ng_click: 'upload.abort()'} &times;
+    %button.close.cancel-upload{ng_click: 'abort()'} &times;
