--- a/lineman/app/templates/proposals.haml
+++ b/lineman/app/templates/proposals.haml
@@ -1,6 +1,7 @@
 .thread-proposals
   %h3.first Proposal
 
+  {{ proposalIds() }}
   %div{ng_repeat: 'proposal in discussion.proposals()'}
     .active-proposal{ng-show: 'isSelectedProposal(proposal)'}
       %proposal_card{proposal: 'proposal'}
