--- a/lineman/app/templates/comment_form.haml
+++ b/lineman/app/templates/comment_form.haml
@@ -1,5 +1,5 @@
 %form{name: 'commentForm', ng_submit: 'submit()'}
-  %textarea#comment-field.form-control{name: 'body', rows: 5, placeholder: "Say something...", ng_model: 'comment.body', mentio: true, mentio-trigger-char: "'@'", mentio_items: 'mentionables', mentio-template-url: 'generated/templates/mentio_menu.html', mentio-search: 'getMentionables(term)', mentio-typed-term: 'typedTerm', mentio-id: 'comment-field', ng-model-options: "{ updateOn: 'default blur', debounce: {'default': 300, 'blur': 0} }"}
+  %textarea#comment-field.form-control{name: 'body', placeholder: "Say something...", ng_model: 'comment.body', mentio: true, mentio-trigger-char: "'@'", mentio_items: 'mentionables', mentio-template-url: 'generated/templates/mentio_menu.html', mentio-search: 'getMentionables(term)', mentio-typed-term: 'typedTerm', mentio-id: 'comment-field', ng-model-options: "{ updateOn: 'default blur', debounce: {'default': 300, 'blur': 0} }"}
   .comment-row.comment-attachments{ng_repeat: 'attachment in comment.newAttachments()'}
     %a.attachment-link{ng_href: '{{attachment.location}}', target: '_blank'}
       {{ attachment.filename }}
