--- a/lineman/app/templates/navbar.haml
+++ b/lineman/app/templates/navbar.haml
@@ -7,24 +7,40 @@
       / don't load this li if the sidebar is open
       %li{dropdown: '', on-toggle: 'toggleInbox(open)'}
         %a.loomio-nav-btn.has-badge.dropdown-toggle{href: '#'}
-          %span.badge 2
+          / lets put unread counts in here:
+          %span.badge
           %i.fa.fa-lg.fa-fw.fa-inbox
           %span.hide Inbox
-        .loomio-nav-dropdown.dropdown-menu{role: 'menu'}
+        .dropdown-menu.loomio-nav-dropdown#inbox-dropdown{role: 'menu'}
           %inbox{ng_show: 'showInbox'}
       %li{dropdown: '', on-toggle: 'toggleSearch(open)'}
         %a.loomio-nav-btn.dropdown-toggle{href: '#'}
           %i.fa.fa-lg.fa-fw.fa-search
-        .loomio-nav-dropdown.dropdown-menu{role: 'menu'}
+        .dropdown-menu.loomio-nav-dropdown#search-dropdown{role: 'menu'}
           %navbar_search{ng_show: 'showSearch'}
-      %li.pull-right
-        %a.loomio-nav-btn{href: '#'}
+
+      %li.pull-right{dropdown: ''}
+        %a.dropdown-toggle.loomio-nav-btn{href: '#'}
           %i.fa.fa-lg.fa-fw.fa-navicon
+        .loomio-nav-dropdown.dropdown-menu#user-options-dropdown
+          %ul.selector-list
+            %li.selector-list-item.visible-xs
+              New thread
+            %li.selector-list-item
+              Profile
+            %li.selector-list-item
+              Email settings
+            %li.selector-list-item
+              Help
+            %li.selector-list-item
+              Contact us
+            %li.selector-list-item
+              Sign out
       %li.pull-right{dropdown: '', on-toggle: 'toggleNotifications(open)', ng-if: 'userLoggedIn()'}
         %a.loomio-nav-btn.dropdown-toggle{href: '#'}
           %i.fa.fa-lg.fa-fw.fa-bell
         .loomio-nav-dropdown.dropdown-menu{role: 'menu'}
           %navbar_notifications{ng_show: 'showNotifications'}
-      %li.pull-right
+      %li.pull-right.hidden-xs
         %a.loomio-nav-btn{href: '#', ng_click: 'openDiscussionForm()'}
           %i.fa.fa-lg.fa-fw.fa-plus
