get rid of dumb toggles

--- a/lineman/app/templates/navbar.haml
+++ b/lineman/app/templates/navbar.haml
@@ -5,7 +5,7 @@
         %a.loomio-nav-btn{href: '#'}
           .loomio-nav-logo
       %navbar_inbox{ng_controller: 'NavbarController'}
-      %navbar_search{ng_show: 'showSearch'}
+      %navbar_search
       %navbar_user_options{ng_controller: 'NavbarController'}
-      %navbar_notifications{ng_show: 'showNotifications'}
+      %navbar_notifications
       %navbar_start_discussion{ng_controller: 'NavbarController'}
