register your directives dummy

--- a/lineman/app/templates/navbar.haml
+++ b/lineman/app/templates/navbar.haml
@@ -4,8 +4,8 @@
       %li
         %a.loomio-nav-btn{href: '#'}
           .loomio-nav-logo
-      %navbar_inbox{ng_controller: 'NavbarController'}
+      %navbar_inbox
       %navbar_search
-      %navbar_user_options{ng_controller: 'NavbarController'}
+      %navbar_user_options
       %navbar_notifications
-      %navbar_start_discussion{ng_controller: 'NavbarController'}
+      %navbar_start_discussion
