--- a/lineman/app/templates/navbar_notifications.haml
+++ b/lineman/app/templates/navbar_notifications.haml
@@ -1,4 +1,4 @@
-%li.pull-right{dropdown: '', on-toggle: 'toggleNotifications(open)', ng-if: 'userLoggedIn()'}
+%li.pull-right{dropdown: '', ng-if: 'userLoggedIn()'}
   %a.loomio-nav-btn.dropdown-toggle{href: '#'}
     %i.fa.fa-lg.fa-fw.fa-bell
   .loomio-nav-dropdown.dropdown-menu{role: 'menu'}
